# sanitisium

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
cli/: Cargo.toml
cli/src/: main.rs
resources/config/: base.yml
resources/pdfium/macOS/: PDFiumConfig.cmake
sanitiser/: Cargo.toml
sanitiser/src/pdf/: load_pdfium.rs  merge.rs  mod.rs  sanitise.rs
src/: main.rs
src/merger/: mod.rs
src/pdf/: merge.rs  sanitise.rs
web/: Cargo.toml
web/src/: app_settings.rs  main.rs  startup.rs
web_server/: Cargo.toml
web_server/src/: app_settings.rs  job.rs  lib.rs  main.rs  startup.rs  storage.rs  telemetry.rs
web_server/src/routes/: health.rs  mod.rs  sanitise.rs
web_server/src/workers/: job.rs
web_server/tests/api/: health_check.rs  helpers.rs  main.rs  sanitise.rs
