[package]
name = "web-server"
authors = ["Bruno Paulino <hi@bpaulino.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/brunojppb/sanitisium"
rust-version = "1.88.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web-server"

[dependencies]
actix-web = "4.11.0"
actix-web-opentelemetry = "0.22.0"
anyhow = { workspace = true }
apalis = { version = "0.7.2", features = ["limit", "tracing"] }
apalis-sql = { version = "0.7.2", features = ["sqlite", "tokio-comp"] }
config = { version = "0.15.13", features = ["yaml"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.31"
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.30" }
opentelemetry_sdk = { version = "0.30", features = [
  "rt-tokio",
  "experimental_trace_batch_span_processor_with_async_runtime",
  "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.30.0", features = [
  "reqwest-client",
  "http-json",
] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
uuid = { workspace = true }
sanitiser = { path = "../sanitiser" }
tracing-actix-web = "0.7.19"
procspawn = { version = "1.0.1", features = ["test-support", "backtrace", "safe-shared-libraries"]}

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6.4"
